# api.pb.gw.go
@@ -1,141 +1,0 @@
-// Code generated by protoc-gen-grpc-gateway. DO NOT EDIT.
-// source: api.proto
-
-/*
-Package api is a reverse proxy.
-
-It translates gRPC into RESTful JSON APIs.
-*/
-package api
-
-import (
-	"context"
-	"io"
-	"net/http"
-
-	"github.com/golang/protobuf/descriptor"
-	"github.com/golang/protobuf/proto"
-	"github.com/grpc-ecosystem/grpc-gateway/runtime"
-	"github.com/grpc-ecosystem/grpc-gateway/utilities"
-	"google.golang.org/grpc"
-	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/grpclog"
-	"google.golang.org/grpc/status"
-)
-
-// Suppress "imported and not used" errors
-var _ codes.Code
-var _ io.Reader
-var _ status.Status
-var _ = runtime.String
-var _ = utilities.NewDoubleArray
-var _ = descriptor.ForMessage
-
-func request_JQService_PostRun_0(ctx context.Context, marshaler runtime.Marshaler, client JQServiceClient, req *http.Request, pathParams map[string]string) (JQService_PostRunClient, runtime.ServerMetadata, error) {
-	var protoReq RunRequest
-	var metadata runtime.ServerMetadata
-
-	newReader, berr := utilities.IOReaderFactory(req.Body)
-	if berr != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
-	}
-	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
-
-	stream, err := client.PostRun(ctx, &protoReq)
-	if err != nil {
-		return nil, metadata, err
-	}
-	header, err := stream.Header()
-	if err != nil {
-		return nil, metadata, err
-	}
-	metadata.HeaderMD = header
-	return stream, metadata, nil
-
-}
-
-// RegisterJQServiceHandlerServer registers the http handlers for service JQService to "mux".
-// UnaryRPC     :call JQServiceServer directly.
-// StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
-func RegisterJQServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server JQServiceServer) error {
-
-	mux.Handle("POST", pattern_JQService_PostRun_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		err := status.Error(codes.Unimplemented, "streaming calls are not yet supported in the in-process transport")
-		_, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-		return
-	})
-
-	return nil
-}
-
-// RegisterJQServiceHandlerFromEndpoint is same as RegisterJQServiceHandler but
-// automatically dials to "endpoint" and closes the connection when "ctx" gets done.
-func RegisterJQServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
-	conn, err := grpc.Dial(endpoint, opts...)
-	if err != nil {
-		return err
-	}
-	defer func() {
-		if err != nil {
-			if cerr := conn.Close(); cerr != nil {
-				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
-			}
-			return
-		}
-		go func() {
-			<-ctx.Done()
-			if cerr := conn.Close(); cerr != nil {
-				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
-			}
-		}()
-	}()
-
-	return RegisterJQServiceHandler(ctx, mux, conn)
-}
-
-// RegisterJQServiceHandler registers the http handlers for service JQService to "mux".
-// The handlers forward requests to the grpc endpoint over "conn".
-func RegisterJQServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
-	return RegisterJQServiceHandlerClient(ctx, mux, NewJQServiceClient(conn))
-}
-
-// RegisterJQServiceHandlerClient registers the http handlers for service JQService
-// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "JQServiceClient".
-// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "JQServiceClient"
-// doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
-// "JQServiceClient" to call the correct interceptors.
-func RegisterJQServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client JQServiceClient) error {
-
-	mux.Handle("POST", pattern_JQService_PostRun_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateContext(ctx, mux, req)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := request_JQService_PostRun_0(rctx, inboundMarshaler, client, req, pathParams)
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_JQService_PostRun_0(ctx, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
-
-	})
-
-	return nil
-}
-
-var (
-	pattern_JQService_PostRun_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"run"}, "", runtime.AssumeColonVerbOpt(true)))
-)
-
-var (
-	forward_JQService_PostRun_0 = runtime.ForwardResponseStream
-)
