# api/api.swagger.json
@@ -13,7 +13,7 @@
   "paths": {
     "/run": {
       "post": {
-        "operationId": "PostRun",
+        "operationId": "JQService_PostRun",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -22,7 +22,7 @@
             }
           },
           "default": {
-            "description": "An unexpected error response",
+            "description": "An unexpected error response.",
             "schema": {
               "$ref": "#/definitions/runtimeError"
             }
